tests/snapshots/examples_fixtures/advanced__using_constants.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/using_constants.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.MathConstants` to import.

  --> examples/advanced/using_constants.flx:17:1
   |
17 | import Modules.MathConstants as Math
   | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.MathConstants.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.MathConstants` under roots: examples/advanced, src (imported from examples/advanced/using_constants.flx).
== stdout ==
<not executed>
